--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -108,7 +108,7 @@
       </div>
     </nz-content>
   </nz-layout>
-  <nz-footer>Created by 中山大学 <a><b>肖鹏博士团队</b></a> @ 2020 ShenZhen<br><a href="http://www.beian.miit.gov.cn">粤ICP备20035084号</a></nz-footer>
+  <nz-footer><app-footer></app-footer></nz-footer>
 </nz-layout>
 
 
