--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="title">
     <img src="https://ng.ant.design/assets/img/logo.svg" alt="logo">
     <h1>曝书</h1>
-    <h2> v0.1 测试版</h2>
+    <h2> v0.99 内部版</h2>
   </div>
   <div class="userinfo">
     <span>欢迎光临[<a>{{userName}}</a>] <button nz-button nzSize="small" nzType="danger" (click)="logout()">退出</button></span>
