--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,3 +1,5 @@
-<div>
-  国家社科基金青年项目 "技术赋能视阈下人文学者的数字学术需求及其图书馆服务策略研究"（18CTQ006）<br><a href="http://www.beian.miit.gov.cn">粤ICP备20035084号</a>
-  <div>
+<!--<nz-footer>-->
+  <div class="footer">
+    国家社科基金青年项目 "技术赋能视阈下人文学者的数字学术需求及其图书馆服务策略研究"（18CTQ006）<br><a href="http://www.beian.miit.gov.cn">粤ICP备20035084号</a>
+    </div>
+<!--</nz-footer>-->
