--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -1,6 +1,13 @@
 .login-form {
   max-width: 300px;
-  margin:0 auto;
+  margin: 0 auto;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100vh;
 }
 
 .login-form-forgot {
@@ -16,20 +23,17 @@
   align-items: center;
   justify-content: flex-end;
 
-  background: black url("https://img.zcool.cn/community/01b7b75dd5f085a8012129e27214ca.jpg@1280w_1l_2o_100sh.jpg") ;
+  background: black url('../../../assets/bg.jpg');
   background-size: cover;
-  height: calc(100% - 70px);
+  height: 100%;
   width: 100%;
 }
 
-nz-card{
+nz-card {
   margin-right: 16vw;
 }
 
-nz-footer{
+nz-footer {
   text-align: center;
 }
 
-.prof{
-  background: #cececeee;
-}
