--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -16,7 +16,7 @@
               [nzTrigger]="null">
 
       <ul nz-menu nzTheme="dark" nzMode="inline" [nzInlineCollapsed]="this.isCollapsed">
-        <li nz-menu-item nz-tooltip nzPlacement="right" nzTitle="{{isCollapsed ? '首页' : ''}}" nzSelected nzMatchRouter>
+        <li nz-menu-item nz-tooltip nzPlacement="right"  nzSelected nzMatchRouter>
           <a routerLink="/welcome"><i nz-icon nzType="home"></i>{{isCollapsed ? '' : '首页'}}</a>
         </li>
         <!--        <li nz-menu-item nz-tooltip nzPlacement="right" [nzTitle]="isCollapsed ? '测试页面' : ''" nzSelected nzMatchRouter>-->
