--- a/src/app/pages/frequency-char/frequency-char.component.html
+++ b/src/app/pages/frequency-char/frequency-char.component.html
@@ -37,7 +37,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr *ngFor="let i of basicTable">
+        <tr *ngFor="let i of basicTable.data">
           <td>{{i.name}}</td>
           <td>{{i.value}}</td>
         </tr>
