--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -56,7 +56,7 @@
 
           </ul>
         </li>
-        <li nz-submenu nzTitle="高级分析" nzIcon="line-chart">
+        <li nz-submenu nzTitle="高级分析" nzIcon="bar-chart">
           <ul>
             <li nz-menu-item nzMatchRouter>
               <a routerLink="/keywords">提取关键词</a>
@@ -78,7 +78,7 @@
             </li>
           </ul>
         </li>
-        <li nz-submenu nzTitle="用户研究" nzIcon="user">
+        <li nz-submenu nzTitle="用户研究" nzIcon="smile">
           <ul>
             <li nz-menu-item nzMatchRouter>
               <a routerLink="/operlog">行为轨迹</a>
