--- a/src/app/pages/translate/translate.component.html
+++ b/src/app/pages/translate/translate.component.html
@@ -4,7 +4,7 @@
       <a><i nz-icon nzType="home"></i><span>首页</span></a>
     </nz-breadcrumb-item>
     <nz-breadcrumb-item>
-      <a><i nz-icon nzType="line-chart"></i><span>特征分析</span></a>
+      <a><i nz-icon nzType="folder"></i><span>数据管理</span></a>
     </nz-breadcrumb-item>
     <nz-breadcrumb-item>
       <a><span>简繁转换</span></a>
