--- a/src/app/pages/clean-auto/clean-auto.component.html
+++ b/src/app/pages/clean-auto/clean-auto.component.html
@@ -1,1 +1,31 @@
-<p>clean-auto works!</p>
+<div>
+  <nz-breadcrumb>
+    <nz-breadcrumb-item>
+      <a><i nz-icon nzType="home"></i><span>首页</span></a>
+    </nz-breadcrumb-item>
+    <nz-breadcrumb-item>
+      <a><i nz-icon nzType="profile"></i><span>数据清洗</span></a>
+    </nz-breadcrumb-item>
+    <nz-breadcrumb-item>
+      <a><span>自动清洗</span></a>
+    </nz-breadcrumb-item>
+  </nz-breadcrumb>
+</div>
+<div>
+  <nz-card nzBordered="false">
+    <app-file-select (eventSelect)="selectFile($event)"></app-file-select>
+    <nz-divider></nz-divider>
+
+    <p>文本内容：</p>
+    <nz-spin [nzSpinning]="isSpanning">
+      <textarea disabled>{{this.file.content}}</textarea></nz-spin>
+    <nz-divider></nz-divider>
+
+    <p>自动清洗：</p>
+
+    <nz-spin [nzSpinning]="isSpanning">
+      <textarea disabled>{{this.abstract}}</textarea></nz-spin>
+    <!--    <nz-alert nzType="error" nzMessage="测试功能，结果仅供参考"></nz-alert>-->
+
+  </nz-card>
+</div>
