--- a/src/app/pages/cluster/cluster.component.html
+++ b/src/app/pages/cluster/cluster.component.html
@@ -4,7 +4,7 @@
       <a><i nz-icon nzType="home"></i><span>首页</span></a>
     </nz-breadcrumb-item>
     <nz-breadcrumb-item>
-      <a><i nz-icon nzType="line-chart"></i><span>特征分析</span></a>
+      <a><i nz-icon nzType="bar-chart"></i><span>特征分析</span></a>
     </nz-breadcrumb-item>
     <nz-breadcrumb-item>
       <a><span>文本聚类</span></a>
