--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -1,4 +1,5 @@
-<div>
+<div class="back">
+  <div class="mask">
   <nz-card class="prof">
     <p>“曝书”平台是国家社科基金青年项目“技术赋能视阈下人文学者的数字学术需求及其图书馆服务策略研究（18CTQ006）的研究成果之一，软件登记号为2020SR0073783。</p>
 
@@ -9,5 +10,5 @@
     <p>第二，它能够记录人文学者在本平台上的使用习惯和行动轨迹，是图书馆员和信息行为研究者探索人文学者的数字学术行为特征的实验性平台；</p>
 
     <p>第三，也是最特别的一点，“曝书”平台本身的功能建设就是依据课题组对各类型人文学者的持续访谈形成的，尤其注重面向那些存在一定数字使用障碍的学者群体展开针对性的迭代工作。</p>
-  </nz-card>
+  </nz-card></div>
 </div>
