--- a/src/app/pages/clean-stop/clean-stop.component.html
+++ b/src/app/pages/clean-stop/clean-stop.component.html
@@ -24,7 +24,7 @@
     <p>去停词：</p>
 
     <nz-spin [nzSpinning]="isSpanning">
-      <textarea disabled>{{this.abstract}}</textarea></nz-spin>
+      <textarea disabled>{{this.contentClean}}</textarea></nz-spin>
     <!--    <nz-alert nzType="error" nzMessage="测试功能，结果仅供参考"></nz-alert>-->
 
   </nz-card>
