--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="main">
   <div class="login-content">
-    <nz-card nzTitle="曝书 v0.99 内部版">
+    <nz-card nzTitle="曝书 v1.0">
       <form nz-form [formGroup]="validateForm" class="login-form" (ngSubmit)="submitForm()">
         <nz-form-item>
           <nz-form-control nzErrorTip="请填写用户名！">
