--- a/src/app/pages/search/search.component.html
+++ b/src/app/pages/search/search.component.html
@@ -15,13 +15,33 @@
 <div>
   <nz-card [nzBordered]="false">
     <nz-input-group nzSearch [nzAddOnAfter]="suffixIconButton">
-      <input type="text" nz-input placeholder="检索文本内容" />
+      <input type="text" nz-input placeholder="检索文本内容" [(ngModel)]="content"/>
     </nz-input-group>
     <ng-template #suffixIconButton>
-      <button nz-button nzType="primary" nzSearch><i nz-icon nzType="search"></i></button>
+      <button nz-button nzType="primary" nzSearch (click)="search()"><i nz-icon nzType="search"></i></button>
     </ng-template>
     <nz-divider></nz-divider>
-    <app-file-list></app-file-list>
+    <nz-table #basicTable
+              nzShowPagination
+              [nzData]="listOfData"
+              nzSize="small"
+              [nzLoading]="isSpinning"
+    >
+      <thead>
+      <tr>
+        <th>文件</th>
+        <th>内容</th>
+        <th>索引值</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr *ngFor="let row of basicTable.data">
+        <td>{{row['filename']}}</td>
+        <td>{{row['sentence']}}</td>
+        <td>{{row['index']}}</td>
+      </tr>
+      </tbody>
+    </nz-table>
   </nz-card>
 </div>
 
