--- a/src/app/pages/frequency-word/frequency-word.component.html
+++ b/src/app/pages/frequency-word/frequency-word.component.html
@@ -23,6 +23,7 @@
       <textarea disabled>{{this.file.content}}</textarea></nz-spin>
     <nz-divider></nz-divider>
 
+    <button nz-button (click)="exportExcel()">导出</button>
     <div nz-row>
       <nz-table nz-col
                 nzSpan="8"
